--- a/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
+++ b/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
@@ -12,5 +12,6 @@
     </padding>
 
     <Label fx:id="welcomeText"/>
+    <Label fx:id="test"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
