--- a/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
+++ b/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.listadetarefa.listadetarefa.HelloController">
     <padding>
@@ -13,5 +14,6 @@
 
     <Label fx:id="welcomeText"/>
     <Label fx:id="test"/>
+    <TextField fx:id="titulo">teste</TextField>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
