--- a/src/main/resources/com/listadetarefa/listadetarefa/tarefa-view.fxml
+++ b/src/main/resources/com/listadetarefa/listadetarefa/tarefa-view.fxml
@@ -12,8 +12,10 @@
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.listadetarefa.listadetarefa.TarefaController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <!--Insets bottom="20.0" left="20.0" right="20.0" top="20.0" -->
     </padding>
+
+    <Label fx:id="teste"></Label>
 
     <Label fx:id="lbTitulo">Digite o titulo da tarefa</Label>
     <TextField fx:id="tfTitulo"></TextField>
@@ -24,7 +26,7 @@
     <Label fx:id="lbImportancia">Digite de 0 a 10 a urgencia da tarefa</Label>
     <Spinner fx:id="spImportancia">
         <valueFactory>
-            <SpinnerValueFactory.IntegerSpinnerValueFactory fx:id="spinnerFactory" min="1" max="10" initialValue="1" />
+            <SpinnerValueFactory.IntegerSpinnerValueFactory fx:id="spinnerFactory" min="1" max="10" initialValue="1"/>
         </valueFactory>
     </Spinner>
 
