--- a/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
+++ b/src/main/resources/com/listadetarefa/listadetarefa/hello-view.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="sample.Controller">
+<VBox fx:id="vboxContainer" xmlns:fx="http://javafx.com/fxml"
+  fx:controller="com.listadetarefa.listadetarefa.HelloController">
+  <!-- Os labels serão adicionados dinamicamente aqui -->
+  <Button text="adicionar nova tarefa" onAction="#novasTarefa" />
+
+
 </VBox>
