--- a/src/main/resources/com/listadetarefa/listadetarefa/tarefa-view.fxml
+++ b/src/main/resources/com/listadetarefa/listadetarefa/tarefa-view.fxml
@@ -2,17 +2,18 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.listadetarefa.listadetarefa.TarefaController">
+    fx:controller="com.listadetarefa.listadetarefa.TarefaController">
     <padding>
-        <!--Insets bottom="20.0" left="20.0" right="20.0" top="20.0" -->
+        <!--Insets
+        bottom="20.0" left="20.0" right="20.0" top="20.0" -->
     </padding>
 
     <Label fx:id="teste"></Label>
@@ -26,7 +27,8 @@
     <Label fx:id="lbImportancia">Digite de 0 a 10 a urgencia da tarefa</Label>
     <Spinner fx:id="spImportancia">
         <valueFactory>
-            <SpinnerValueFactory.IntegerSpinnerValueFactory fx:id="spinnerFactory" min="1" max="10" initialValue="1"/>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory fx:id="spinnerFactory" min="1" max="10"
+                initialValue="1" />
         </valueFactory>
     </Spinner>
 
